fix: text alignment of error text

--- a/frontend/src/pages/ListContent/components/addNewSection/styles.scss
+++ b/frontend/src/pages/ListContent/components/addNewSection/styles.scss
@@ -8,6 +8,10 @@
     }
   }
 
+  .error{
+    align-self: center;
+  }
+
   .btn-container{
     display: flex;
     flex-direction: row;
